fix(footer): change divider dark mode color

--- a/tegel/src/components/footer/footer-theme-vars.scss
+++ b/tegel/src/components/footer/footer-theme-vars.scss
@@ -26,7 +26,7 @@
 
 .sdds-theme-dark {
   --sdds-footer-top-background: var(--sdds-grey-868);
-  --sdds-footer-top-divider: var(--sdds-grey-300);
+  --sdds-footer-top-divider: var(--sdds-grey-800);
   --sdds-footer-top-links: var(--sdds-grey-50);
   --sdds-footer-top-links-background-hover: var(--sdds-grey-300);
   --sdds-footer-top-links-opacity: 0.87;
